notes.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: notes
spec:
  hosts:
  - "*"
  gateways:
  - notes-gateway
  http:
  - name: "notes-v2-routes-header"
    match:
    - headers:
        end-user:
          exact: jason
    route:
    - destination:
        host: notes
        subset: v2
  - name: "notes-v2-routes"
    match:
    - uri:
        prefix: "/newnotes"
    - uri:
        prefix: "/v2/notes"
    rewrite:
      uri: "/notes"
    route:
    - destination:
        host: notes
        subset: v2
  - name: "notes-v1-route"
    route:
    - destination:
        host: notes
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: notes
spec:
  hosts:
  - "*"
  gateways:
  - notes-gateway
  http:
  - route:
    - destination:
        host: notes
        subset: v1
      weight: 90
    - destination:
        host: notes
        subset: v2
      weight: 10
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: notes-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-nothing
  namespace: default
spec:
  {}
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: "notes-viewer"
  namespace: default
spec:
  selector:
    matchLabels:
      app: test
  action: ALLOW
  rules:
  - to:
    - operation:
        methods: ["GET"]
